[gd_scene load_steps=2 format=3 uid="uid://cmncdq2jq22xm"]

[ext_resource type="Script" uid="uid://c2jjya8mbt4dr" path="res://menus/play_menu/play_menu.gd" id="1_fmnve"]

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmnve")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -68.0
offset_right = 47.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="EasyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="MediumButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="HardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CustomButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Custom"

[node name="CustomEditButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "@"

[node name="ContinousToggleSwitch" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Continous Movement"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 45.0
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="VBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CustomButton" to="." method="_on_custom_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CustomEditButton" to="." method="_on_custom_edit_button_pressed"]
[connection signal="toggled" from="VBoxContainer/ContinousToggleSwitch" to="." method="_on_continous_toggle_switch_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
